--- a/dashboard.html
+++ b/dashboard.html
@@ -110,7 +110,7 @@
             }
         });
     </script>
-
+<a href="days-together.html" class="text-pink-500 underline">See our days together!</a>
     <script src="app.js"></script>
 </body>
 
