--- a/daystogether.html
+++ b/daystogether.html
@@ -23,7 +23,7 @@
         }
 
         .love-counter {
-            background-color: #cd7f7f;
+            background-color: #fff;
             padding: 2rem;
             border: 2px solid #000;
             border-radius: 10px;
