--- a/dashboard.html
+++ b/dashboard.html
@@ -114,4 +114,5 @@
     <script src="app.js"></script>
 </body>
 <a href="daystogether.html" class="text-pink-500 underline">See our days together!</a>
+<a href="letter.html" class="text-blue-500 underline">Special Letter!</a>
 </html>
