--- a/letter.html
+++ b/letter.html
@@ -30,8 +30,8 @@
                                 <div class="image-container">
                                     <img src="img\IMG_8194.JPEG" class="letter-img" alt="Photo 1">
                                 </div>
-                                <strong style="font-size: .89rem;">My beloved wife,</strong>
-                                <p style="text-indent: 15px;">
+                                <strong style="font-size: .75rem;">My beloved wife❤️,</strong>
+                                <p style="text-indent: 10px;">
                                     Life is truly full of ironies, isn’t it? I sit here, my heart heavy with endless regrets. I love you with a burning
                                     passion, and I cherish the dreams we once held together. Perhaps fate never intended for us to have a happy ending.
                                     
@@ -50,7 +50,7 @@
                                     reserved for you. If fate gives us another chance, I would gladly continue our unfinished story by your side.
                                 </p>
                                 <p class="love">Loving and cherishing you,
-                                                Always.</p>
+                                                Always by sunflower🌻🩵.</p>
                                 <div class="pana">
                                     <div class="gif-container">
                                     </div>
