--- a/letter.html
+++ b/letter.html
@@ -58,6 +58,10 @@
 
     </div>
     </div>
+    <!-- Thêm link vào đây -->
+    <div class="text-center py-5">
+        <a href="https://photos.app.goo.gl/EGpJWrcCPjXWga7b6" target="_blank" class="text-blue-500 hover:underline font-bold">Kỉ niệm của anh và em đều ở đây❤️!</a>
+    </div>
     <script>
         const envelope = document.querySelector('.envelope-wrapper');
         const images = document.querySelectorAll('.letter-img');
